--- a/core/assets/site/locale/en/lang_screen_details.xml
+++ b/core/assets/site/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.4 2008/07/03 05:38:27 lwright Exp $
+* $Id: lang_screen_details.xml,v 1.5 2011/08/03 06:20:19 cupreti Exp $
 *
 */
 -->
@@ -32,20 +32,38 @@
 			</function_call>
 		</field>
 		<field>
-			<display_name>Not Found</display_name>
-			<note>The Asset that gets printed when the URI that the user has entered does not exist</note>
-			<function_call>
-				<paint_function   name="paintNotFoundPage"   />
-				<process_function name="processNotFoundPage" />
-			</function_call>
-		</field>
-		<field>
 			<display_name>Archived Asset</display_name>
 			<note>When a user without read access accesses an archived asset within this site on the frontend, the selected asset will be printed instead of showing the login screen.</note>
 			<function_call>
 				<paint_function   name="paintArchivedPage"   />
 				<process_function name="processArchivedPage" />
 			</function_call>
+		</field>
+	</section>
+	<section name="Page Not Found Link">
+		<field>
+			<display_name>Not Found Page</display_name>
+			<note>The Asset that gets printed when the URI that the user has entered does not exist</note>
+			<function_call>
+				<paint_function   name="paintNotFoundPage"   />
+				<process_function name="processNotFoundPage" />
+			</function_call>
+		</field>		
+		<field>
+			<display_name>Override Design</display_name>
+			<note>This will override the design based on the current URI that the user has entered</note>
+			<function_call>
+				<paint_function   name="paintNotFoundPageDesign"   />
+				<process_function name="processNotFoundPageDesign" />
+			</function_call>
+		</field>		
+		<field>
+			<display_name>Override Paint Layout</display_name>
+			<note>This will override the paint layout based on the current URI that the user has entered</note>
+			<function_call>
+				<paint_function   name="paintNotFoundPagePaintLayout"   />
+				<process_function name="processNotFoundPagePaintLayout" />
+			</function_call>			
 		</field>
 	</section>
 </contents>
