--- a/core/assets/form/form_question_types/form_question_type_datetime/locale/en/lang_screen_details.xml
+++ b/core/assets/form/form_question_types/form_question_type_datetime/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.9 2011/09/09 00:58:45 akarelia Exp $
+* $Id: lang_screen_details.xml,v 1.10 2011/09/09 00:59:46 akarelia Exp $
 */
 -->
 
@@ -55,7 +55,7 @@
 		</field>
 		<field attribute="print_format">
 			<display_name>Print Format</display_name>
-			<note>This &lt;a href="http://au.php.net/date" target="_blank"&gt;PHP date()&lt;/a&gt; format will be used to format this question's summary. This will be the format displayed on the Thank You screen when this field is shown, and when viewing and exporting submission logs. If you need to use a letter that has special meaning, you will need to escape it with a backslash. A default date will be used if you specify a date() component that is not offered to the user above.</note>
+			<note>This &lt;a href="http://au.php.net/date"&gt;PHP date()&lt;/a&gt; format will be used to format this question's summary. This will be the format displayed on the Thank You screen when this field is shown, and when viewing and exporting submission logs. If you need to use a letter that has special meaning, you will need to escape it with a backslash. A default date will be used if you specify a date() component that is not offered to the user above.</note>
 		</field>
 		<field attribute="tabindex">
 			<display_name>Tab Index</display_name>
